--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.6.2",
     "express": "^4.14.0",
+    "helmet": "^2.3.0",
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6"
