--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "mongoose": "^4.6.3",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6"
+  },
+  "devDependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "jsonwebtoken": "^7.1.9",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
