--- a/public/package.json
+++ b/public/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel nitron/src -d nitron/app",
+    "babelify": "browserify nitron/src/app.es6 -o nitron/app/app.js -t [ babelify --presets [ es2015 ] ]",
+    "watch": "babel nitron/src -d nitron/app --watch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babelify": "^7.3.0",
     "jasmine": "^2.5.2"
+  },
+  "dependencies": {
+    "requirejs": "^2.3.2"
   }
 }
