--- a/public/package.json
+++ b/public/package.json
@@ -16,7 +16,8 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
-    "jasmine": "^2.5.2"
+    "jasmine": "^2.5.2",
+    "jasmine-ajax": "^3.2.0"
   },
   "dependencies": {
     "requirejs": "^2.3.2"
