--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "bcrypt-nodejs": "0.0.3",
     "jsonwebtoken": "^7.1.9",
+    "mocha": "^3.1.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
